--- a/ConditionAndLoopingDemos/ConditionAndLoopingDemos.csproj
+++ b/ConditionAndLoopingDemos/ConditionAndLoopingDemos.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>ConditionAndLoopingDemos.SecondProgram</StartupObject>
+    <StartupObject>ConditionAndLoopingDemos.ForLoopExample</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ForLoopExample.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SecondProgram.cs" />
